--- a/Shell.xaml
+++ b/Shell.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ContactManager.MainWindow"
+﻿<Window x:Class="ContactManager.Shell"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ContactManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Contact Manager" Height="450" Width="800">
     <Grid>
         
     </Grid>
