--- a/UserControls/SearchBar.xaml
+++ b/UserControls/SearchBar.xaml
@@ -4,9 +4,17 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ContactManager.UserControls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              >
-    <Grid>
-            
+    <Grid Height="1" RenderTransformOrigin="0.5,0.5">
+        <Grid.RenderTransform>
+            <TransformGroup>
+                <ScaleTransform ScaleY="-1"/>
+                <SkewTransform/>
+                <RotateTransform/>
+                <TranslateTransform/>
+            </TransformGroup>
+        </Grid.RenderTransform>
+
     </Grid>
 </UserControl>
